[3440318] Filters can now be cleared by double-clicking on the filter indicator in
the status bar. Also, Filter Menu correctly changed when a filter is active.
[3435869] '-g config_file' option now accepts a non-existing file,
creating it after notfying the user.
[3430196] Buttons in the Options property pages now retain the user's Windows theme.
[] Thanks to Jon F. for proofreading the online help.

New Features for 3.27
=====================
[3367590] User can now add a database name and description via the Properties
diaolg.
[3349458] Allow filters to match on rules based on the password's length.
[3316779] Shift + "left mouse button 'Double-Click'" now configurable for user.
Default is copy the username to the clipboard.
[] Preferences stored in the database are shown in blue in the Options dialogs.

Changes to Existing Features in 3.27
====================================
[3406549] Tooltip for System tray (displaying database file path) is
now limited to 40 characters (replacing text in the middle with '...'
if needed).
[3348954] The passphrase is now required to change from read-only to
read/write.

Bugs fixed in 3.27
==================
[3411210] No longer crashes when unlocking with Subset Password dialog
box opened.
[3395549] PasswordSafe now displays forms correctly on Netbooks.
[3382422] Toolbar now updated to reflect R/W or R-O mode when user
dynamically changes mode. 
[3380714] User can now save database after manually taking a bakup.
[3380424] System Menu 'X' now closes the Edit/View PropertyPages when
the database is in R-O mode or the entry is protected.
[] Filter image in Status bar is no longer replaced by 'Filter1' after
changing preferences via Manage->Options.
[] Selecting hexadecimal passwords as the database policy no longer
causes validation to fail.
[] Correctly show database has been modified (to allow saving) if
database preferences have been changed.

New Features for 3.26
=====================