@@ -128,6 +128,11 @@ the status bar. Also, Filter Menu correctly changed when a filter is active.</td
 </tr>
 <tr>
 <td align="center" width="100">n/a</td>
+<td>Fix inability to copy entries to the original database in the Compare database results
+dialog.</td>
+</tr>
+<tr>
+<td align="center" width="100">n/a</td>
 <td>Thanks to Jon F. for proofreading the online help.</td>
 </tr>
 </tbody>
